kubectl_deploy/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: custody
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: custody
    spec:
      containers:
      - name: custody
        image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/hmpps/custody:latest
        ports:
        - containerPort: 80
