kubectl_deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: custody-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: custody.apps.cloud-platform-live-0.k8s.integration.dsd.io
    http:
      paths:
      - path: /
        backend:
          serviceName: custody-svc
          servicePort: 80
